--- a/Interdisciplinar/Views/Cursos/Details.cshtml
+++ b/Interdisciplinar/Views/Cursos/Details.cshtml
@@ -7,22 +7,26 @@
 
 <div class="panel	panel-primary">
     <div class="panel-heading">
-        Visualizando	detalhes	de	um curso
+        Visualizando detalhes de	um curso
     </div>
     <div class="panel-body">
         <div class="form-group">
             @Html.LabelFor(model => model.Nome)
+            @Html.LabelFor(model => model.Coordenador)
+            @Html.LabelFor(model => model.EmailCoordenador)
             <br />
             <div class="input-group">
                 <span class="input-group-addon">
                     <i class="glyphicon	 glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
     </div>
     <div class="panel-footer panel-info">
         @Html.ActionLink("Alterar", "Edit", new { id = Model.CursoId }, new { @class = "btn	btn-info" })
-        @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn	btn-info" })
+        @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-info" })
         </div>
 </div>
