--- a/Interdisciplinar/Views/Cursos/Edit.cshtml
+++ b/Interdisciplinar/Views/Cursos/Edit.cshtml
@@ -24,10 +24,18 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Coordenador, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.EmailCoordenador, htmlAttributes: new { @class = "control-label col-md-2" })
+
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
 
+                        @Html.EditorFor(model => model.Coordenador, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Coordenador, "", new { @class = "text-danger" })
+
+                        @Html.EditorFor(model => model.EmailCoordenador, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EmailCoordenador, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
