--- a/Interdisciplinar/Views/DepartamentosOpet/Details.cshtml
+++ b/Interdisciplinar/Views/DepartamentosOpet/Details.cshtml
@@ -1,42 +1,31 @@
 ﻿@model Interdisciplinar.Models.DepartamentoOpet
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Visualizando detalhes de um departamento";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div>
-        <h4>DepartamentoOpet</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Nome)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Nome)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.EmailDepartamento)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.EmailDepartamento)
-            </dd>
-    
-        </dl>
+<div class="panel	panel-primary">
+    <div class="panel-heading">
+        Visualizando detalhes de departamento
     </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.DepartamentoOpetId }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+    <div class="panel-body">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nome)
+            @Html.LabelFor(model => model.EmailDepartamento)
+            <br />
+            <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon	 glyphicon-user"></i>
+                </span>
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.EditorFor(model => model.EmailDepartamento, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+        </div>
+    </div>
+    <div class="panel-footer panel-info">
+        @Html.ActionLink("Alterar", "Edit", new { id = Model.DepartamentoOpetId }, new { @class = "btn	btn-info" })
+        @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-info" })
+    </div>
+</div>
+
